# frankie

./: .gitignore  .markdownlint-cli2.jsonc  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml  typos.local.toml  typos.toml
.codescene/: code-health-rules.json
.github/workflows/: ci.yml  coverage-main.yml  release.yml
docs/: adr-001-incremental-sync-for-review-comments.md  adr-002-codex-execution-stream-and-transcript-model.md  adr-003-session-resumption-for-interrupted-codex-runs.md  adr-004-inline-template-based-reply-drafting.md  adr-005-cross-surface-library-first-delivery.md  adr-006-ai-rewrite-preview-and-fallback-contract.md  adr-007-automated-resolution-verification-semantics-and-persistence.md  adr-008-pr-discussion-summary-contract.md  adr-009-review-banner-translation-contract.md  adr-010-close-review-adapter-capability-gap.md  building-idiomatic-terminal-uis-with-bubbletea-rs.md  complexity-antipatterns-and-refactoring-strategies.md  contents.md  developers-guide.md  documentation-style-guide.md  frankie-design.md  ortho-config-users-guide.md  repository-layout.md  review-banner-translation.md  roadmap.md  rstest-bdd-users-guide.md  rust-doctest-dry-guide.md  snapshot-testing-bubbletea-terminal-uis-with-insta.md  two-tier-testing-strategy-for-an-octocrab-github-client.md  users-guide.md
docs/execplans/: 2-1-3-public-review-thread-aggregate.md  2-2-1-comment-detail-view-with-inline-code-context.md  2-2-2-provide-full-screen-diff-context.md  2-2-3-pr-time-travel-navigation.md  2-2-4-time-travel-params-in-public-api.md  2-2-5-time-travel-state-in-public-api.md  2-2-6-replace-the-fixed-internal-commit-history-limit-with-configurable-options.md  2-2-7-extract-time-travel-orchestration-into-pure-library-services.md  2-3-1-structured-comment-export.md  2-3-2-template-driven-export-customisation.md  3-1-1-wire-comment-exports-into-codex-exec.md  3-1-2-session-resumption-for-interrupted-codex-runs.md  3-2-1-template-based-reply-drafting.md  3-2-2-ai-powered-comment-expansion.md  3-2-3-extract-reply-templating-into-library-module.md  3-2-4-reply-templating-data-transfer-object.md  3-2-5-expose-default-reply-templates-as-public-api.md  3-2-5-expose-default-reply-templates-as-public-library-api.md  3-3-1-automated-resolution-verification.md  3-3-2-summary-generation-for-pr-level-discussions.md  3-3-3-replace-shared-tui-references-with-host-neutral-references.md  snapshot-tests-for-tui-resize.md
migrations/2025-12-14-000000_initial_schema/: down.sql  up.sql
migrations/2025-12-20-000000_pr_metadata_cache/: down.sql  up.sql
migrations/2026-03-02-000000_review_comment_verifications/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs  telemetry.rs  tests.rs  time.rs
src/ai/: codex_exec.rs  codex_exec_tests.rs  codex_process.rs  mod.rs  session.rs  transcript.rs  transcript_fs.rs
src/cli/: ai_rewrite.rs  export_comments.rs  interactive.rs  migrations.rs  mod.rs  output.rs  pull_request_context.rs  repository_listing.rs  review_tui.rs  review_tui_tests.rs  single_pr.rs  test_utils.rs  (+2 more)
tests/: ai_reply_rewrite_bdd.rs  cli_config_bdd.rs  cli_interactive_mode.rs  cli_migrate_db.rs  codex_exec_bdd.rs  codex_session_resume_bdd.rs  comment_detail_bdd.rs  comment_export_bdd.rs  commit_history_limit_bdd.rs  database_migration_bdd.rs  diff_context_render_perf.rs  full_screen_diff_context_bdd.rs  interactive_tui_resize_snapshots.rs  local_discovery_bdd.rs  openai_vidaimock.rs  pr_discussion_summary_bdd.rs  pr_discussion_summary_vidaimock.rs  pr_intake_bdd.rs  pr_metadata_cache_bdd.rs  reply_template_public_api.rs  repository_listing_bdd.rs  review_sync_bdd.rs  template_export_bdd.rs  template_reply_drafting_bdd.rs  time_travel_bdd.rs  time_travel_orchestration_bdd.rs  time_travel_params_bdd.rs  time_travel_state_bdd.rs  tui_pr_discussion_summary_bdd.rs  tui_verify_resolutions_bdd.rs  verify_resolutions_bdd.rs
(+272 files in other folders)
