[package]
name = "frankie"
version = "0.1.0"
edition = "2024"

[features]
default = []
test-support = []

[dependencies]
async-trait = "0.1.83"
camino = { version = "1.2.2", features = ["serde1"] }
clap = { version = "4.5.53", features = ["derive"] }
diesel = { version = "2.3.4", features = ["sqlite"] }
diesel_migrations = "2.3.1"
http = "1.1.0"
octocrab = "0.48.1"
ortho_config = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
git2 = "0.20.3"
chrono = { version = "0.4.43", features = ["serde"] }
cap-std = { version = "4.0.0", features = ["fs_utf8"] }
tracing = "0.1.41"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# TUI framework
bubbletea-rs = "0.0.9"
bubbletea-widgets = "0.1.12"
crossterm = "0.29"

# Syntax highlighting
syntect = "5.2.0"
unicode-width = "0.2.2"

# Template engine
minijinja = "2.14.0"

[dev-dependencies]
frankie = { path = ".", features = ["test-support"] }
env-lock = "0.1.0"
mockall = "0.12.1"
insta = { version = "1.46.3", features = ["filters"] }
ratatui-testlib = { version = "0.1.0", features = ["snapshot-insta"] }
rstest = "0.22.0"
rstest-bdd = "0.5.0"
rstest-bdd-macros = { version = "0.5.0", features = ["compile-time-validation"] }
tempfile = "3.15.0"
tokio = { version = "1.48.0", features = ["test-util", "time"] }
wiremock = "0.6.5"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# 1. hygiene
allow_attributes                    = "deny"
allow_attributes_without_reason     = "deny"
blanket_clippy_restriction_lints    = "deny"
cognitive_complexity                = "deny"
needless_pass_by_value              = "deny"
implicit_hasher                     = "deny"

# 2. debugging leftovers
dbg_macro                           = "deny"
print_stdout                        = "deny"
print_stderr                        = "deny"

# 2. panic-prone operations
unwrap_used                         = "deny"
expect_used                         = "deny"
indexing_slicing                    = "deny"
string_slice                        = "deny"
integer_division                    = "deny"
integer_division_remainder_used     = "deny"
panic_in_result_fn                  = "deny"
unreachable                         = "deny"

# 4. portability
host_endian_bytes                   = "deny"
little_endian_bytes                 = "deny"
big_endian_bytes                    = "deny"

# 5. nursery idiom polish
let_underscore_must_use             = "deny"
or_fun_call                         = "deny"
option_if_let_else                  = "deny"
self_named_module_files             = "deny"
shadow_reuse                        = "deny"
shadow_same                         = "deny"
shadow_unrelated                    = "deny"
str_to_string                       = "deny"
string_lit_as_bytes                 = "deny"
try_err                             = "deny"
unneeded_field_pattern              = "deny"
use_self                            = "deny"

# 6. numerical foot-guns
float_arithmetic                    = "deny"
cast_possible_truncation            = "deny"
cast_possible_wrap                  = "deny"
cast_precision_loss                 = "deny"
lossy_float_literal                 = "deny"

# 7. API ergonomics
missing_const_for_fn                = "deny"
must_use_candidate                  = "deny"
unused_async                        = "deny"

# 8. Error handling
missing_panics_doc                  = "deny"
error_impl_error                    = "deny"
result_large_err                    = "deny"

[lints.rust]
missing_docs                        = "deny"

[lints.rustdoc]
missing_crate_level_docs            = "deny"
